# video-plataform

./: .env  .gitignore  Cargo.toml  Dockerfile  allfileshashe.txt  allobjectsize.txt  docker-compose.yml  eval "$(ssh-agent -s)".pub  eval $(ssh-agent -s)  init-db.sh  reset_db.sh
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: 20241030170530_custom_migration.down.sql  20241030170530_custom_migration.up.sql  20241030170530_init.up.sql
backend/src/: main.rs  models.rs  schema.rs  schema.sql
backend/src/services/: addresses.rs  all_videos copy.rs  all_videos_copy 4.rs  attendances.rs  backup_videomedias_copy.rs  bakup_videos_copy.rs  chat.rs  chat_rooms.rs  document.rs  documents.rs  file_metadatas.rs  groups.rs  guardians.rs  health.rs  logs.rs  messages.rs  meus_videos.rs  mod.rs  parents.rs  phones.rs  photos.rs  playes.rs  schedule_changes.rs  students copy.rs  students.rs  tags.rs  tasks.rs  testevideo.rs  users.rs  video_service.rs  videomedias.rs  videos.rs  videos_copy.rs  videotags.rs  videouploads.rs  warnings.rs  xdocuments.rs  xxdocuments.rs
backend/static/images/: paisagem.jfif
backend/uploads/: default_filename
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/my-app/: tailwind.config.ts
migrations/: 20241030170530_init.down.sql
producer/: Cargo.toml
producer/src/: main.rs
scripts/: reset-db.sh
src/: main.rs  models.rs  schema.rs  schema.sql
src/services/: guardians.rs  parents.rs  students.rs  videos.rs
transcoder/: Cargo.toml  Dockerfile
transcoder/src/: backup_main_copy.rs  main.rs
(+261 files in other folders)
