[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-cors = "0.6"
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
dotenv = "0.15"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "time"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.10"
async-trait = "0.1"
futures-util = "0.3"
lapin = "1.7"

